--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: .
     ports:
       - "5000:5000"
+    environment:
+      OPENAI_API_KEY: "${OPENAI_API_KEY}"
   nginx:
     image: nginx:alpine
     ports:
