--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-FLASK_APP=app
-FLASK_ENV=development
-
-# Once you add your API key below, make sure to not share it with anyone! The API key should remain private.
 OPENAI_API_KEY=
+DISCORD_TOKEN=
+DISCORD_GUILD=
