--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,5 @@ version: '3'
 services:
   web:
     build: .
-    ports:
-      - "5000:5000"
-    environment:
-      OPENAI_API_KEY: "${OPENAI_API_KEY}"
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - static_files:/app/static
-    depends_on:
-      - web
-volumes:
-  static_files:
+    env_file:
+      - .env
