--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,12 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - testaction
+      - main
+
 env:
   IMAGE_NAME: openai-discord-bot
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
   INSTANCE_IP: 13.48.30.232
   INSTANCE_USERNAME: ubuntu
 
@@ -17,31 +20,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Get AWS registry token
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: eu-north-1
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - run: |
-          TOKEN=$(aws ecr-public get-authorization-token --registry-id public --output text --query 'authorizationData[].authorizationToken')
-          echo "::add-secret::AWS_REGISTRY_TOKEN=$TOKEN"
-
-      - name: Login to Docker
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: public.ecr.aws
-          username: AWS
-          password: ${{ secrets.AWS_REGISTRY_TOKEN }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ env.DOCKERHUB_PASSWORD }}
 
       - name: Build and push Docker image
         id: build-image
         env:
           IMAGE_NAME: ${{ env.IMAGE_NAME }}
         run: |
-          docker build -t public.ecr.aws/dilldall/$IMAGE_NAME .
-          docker push public.ecr.aws/dilldall/$IMAGE_NAME
+          docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME .
+          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME
 
       - name: Deploy Docker image to EC2
         uses: appleboy/ssh-action@master
@@ -52,5 +43,5 @@ jobs:
           script: |
             docker stop openai-discord-bot || true
             docker rm openai-discord-bot || true
-            docker pull public.ecr.aws/dilldall/$IMAGE_NAME
-            docker run -d --name discord-openai-bot public.ecr.aws/dilldall/$IMAGE_NAME
+            docker pull $DOCKERHUB_USERNAME/$IMAGE_NAME
+            docker run -d --name discord-openai-bot $DOCKERHUB_USERNAME/$IMAGE_NAME
