--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   IMAGE_NAME: openai-discord-bot
-  DOCKERHUB_USERNAME: my_dockerhub_username
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
   INSTANCE_IP: 13.48.30.232
   INSTANCE_USERNAME: ubuntu
