--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set image tag
+        id: set-tag
+        if: startsWith(github.ref, 'refs/tags/')
+        run: echo ::set-output name=TAG_NAME::${{ github.ref.replace('refs/tags/', '') }}
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
