--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,8 @@ jobs:
 
       - name: Set image tag
         id: set-tag
-        run: echo ::set-output name=TAG_NAME::${{ github.ref }}
+        if: startsWith(github.ref, 'refs/tags/')
+        run: echo ::set-output name=TAG_NAME::${{ github.ref.replace('refs/tags/', '') }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
