--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,9 +20,8 @@ jobs:
 
       - name: Set image tag
         id: set-tag
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          echo "TAG_NAME=${{ github.ref.replace('refs/tags/', '') }}" >> $GITHUB_ENV
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -34,8 +33,7 @@ jobs:
         id: build-image
         env:
           IMAGE_NAME: ${{ env.IMAGE_NAME }}
-          TAG_NAME: ${{ env.TAG_NAME }}
         run: |
-          docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:$TAG_NAME -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest .
-          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:$TAG_NAME
+          docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:$RELEASE_VERSION -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest .
+          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:$RELEASE_VERSION
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
